minor text revs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,9 @@
 <div class="section group">
     <div class="intro-bar"></div>
     <div class="col span_5_of_5 bighead bighead-barleft bigpadright">
-        Thoughtful solutions framed <br>by design &amp; founded on technological artistry.
+
+      Thoughtful solutions framed by design. Always adaptive.
+      <!--&amp; founded on technological artistry.-->
       <!--technological sophistication, or: mastery wizardry dexterity virtuosity expertise prowess?
       or, simply: founded on technology. ? -->
     </div>
@@ -18,7 +20,7 @@
         We produce white label developer kits for mobile applications.
         We build business intelligence tools for non-profits.
         We have hosted thousands of web sites. We've been crafting digital solutions for more than 25 years.
-        Simply, we can help countless clients translate their visions into elegantly designed software.
+        Simply, we translate visions into elegantly designed software.
 
 <!--
         In over 25 years of business,
@@ -200,10 +202,10 @@
         </div>
     </div>
     <div class="col span_1_of_5 topline">
-        <h3>Critical Acclaim</h3>
+        <h3>In Publications</h3>
       <!--NOTE: "Publications" connotes that PostTool wrote these things
         What other terms would better describe this collection?
-        Plaudits? Recognition? Testimonials? Citations? References? Praise for Post Tool?
+        Critical Acclaim? Plaudits? Recognition? Testimonials? Citations? References? Praise for Post Tool?
         In the News? Cool People Talking about Us? -->
         <ul>
             <li>Blobjects,<br>San Jose Museum of Art</li>
