--- a/views/process.ejs
+++ b/views/process.ejs
@@ -18,8 +18,8 @@
             <div class="medium">
                 Research, documentation, design and development are a unified process in which all
                 team members participate.
-              Our goal is to keep the software usable and logically consistent as it
-                adapts to use and matures.
+              Our goal is to keep the software usable and logically consistent as it matures and
+                adapts to use.
               Post Tool classifies all software development projects into phases. A typical project progresses through
                 each of the following phases.
               <!--Often we loop through the phases continuously as needs and
@@ -80,7 +80,7 @@
               We learn your language, then refine, standardize, and document it. We use this language to establish
               all the requirements and desires of key stakeholders.
             </p>
-            <p>Visual design begins. Design directions are explored in close communication with the client.
+            <p>Visual design begins. Design directions are explored in close communication with you, the client.
             </p>
 
             <!--<p>Sometimes software is developed to support an existing process and sometimes it offers something
@@ -99,16 +99,16 @@
              <div class="col span_2_of_3">
               <p>We analyze the project into component parts before any coding begins. We quantify and estimate roles and document workflows.
                 We create a spreadsheet listing each significant part with an estimated time frame.
-                 This mapping allows us to estimate resource requirements in detail. It also allows the client to understand
+                 This mapping allows us to estimate resource requirements in detail. It also allows you to understand
                the work as it progresses.</p>
-             <p>There is a wide assortment of platforms, libraries, frameworks, licenses, programming languages, etc.
-                Java, Ruby, Django, Apache ... &ldquo;The Cloud&rdquo; If you are familiar with the jargon, we will
-                openly discuss details in a technical way. If you are not, we will walk through the pros and cons of all
-                approaches especially in terms of cost of maintenance.</p>
              <p>Your data ecosystem is complex. Often legacy systems must be closely intermingled with new functionality. We
                 develop content strategies and processes that help you identify, prioritize, produce and control the
                 flow of content to meet the needs of all personas. We customize and configure sophisticated content
                 management systems capable of managing &lsquo;big data&rsquo; scale content and media.</p>
+             <p>There are a wide assortment of platforms, libraries, frameworks, licenses, programming languages, etc.
+                Java, Ruby, Django, Apache ... &ldquo;The Cloud.&rdquo; If you are familiar with the jargon, we will
+                openly discuss details in a technical way. If you are not, we will walk through the pros and cons of all
+                approaches especially in terms of cost of maintenance.</p>
              <!--</div>-->
              </div>
         </div>
@@ -155,9 +155,9 @@
              <div class="col span_2_of_3">
             <p>We produce a comprehensive overview of the application. This is our roadmap.
               <!--in collaboration with the client.-->
-              This includes wireframes and process flows for identified roles.
+              It includes wireframes and process flows for all identified roles.
 
-              We work iteratively, refining based on feedback from the client, developing toward final approval of
+              We work iteratively, refining based on feedback from you, developing toward final approval of
               the project specifications.
             </p>
             <p>Using the discovery and planning documents, we implement initial wireframes. These wireframes can be
@@ -191,7 +191,7 @@
         <div class="col span_3_of_5 phase" data-roles='{ "you": 0.2, "vis": 0.2, "ux": 1, "sys": 1, "pm": 0.2 }'>
             <div class="col span_1_of_3"><h3>Application Development</h3></div>
              <div class="col span_2_of_3">
-            <p>We build your dream. Our UX, design and development teams build highly functional and custom applications to fit your needs.
+            <p>We build your dream. Our UX, design and development teams create highly functional and custom applications to fit your needs.
               We have established a visual design vocabulary. We have finalized documentation. Coding begins.
             <!--  As more daily work moves online, the need for increasingly complex web applications &ndash; either as a
                 complement to existing products or software as service &ndash; becomes essential. We believe they
