--- a/views/index.ejs
+++ b/views/index.ejs
@@ -130,8 +130,10 @@
     <div class="col span_1_of_5 hspan_2">
         <h3>System Administration</h3>
 
-        <p>We offer a variety of system administration services.
-            Need a cluster? No problem. Distributed architecture is within reach. Get in touch
+        <p>We offer a variety of system administration services. I.T. automation has arrived.
+            We use tools like Vagrant and Chef to standardize the development and deployment process.
+            Does your application require a cluster or compute cloud? No problem.
+            Distributed architecture is within reach. Get in touch
             if you want to discuss your particular circumstances.</p>
     </div>
 
